# Whisper-Voice

./: .gitignore  README.md  backlog.md  build_exe.py  project.md  pyproject.toml  run_dev.py  whisper_voice_mvp.spec
docs/: MAINTENANCE.md  MODEL_DISTRIBUTION_GUIDE.md  TROUBLESHOOTING.md
src/: __init__.py  main.py
src/app/: __init__.py  audio_processor.py  core.py  transcriber.py
src/app/ui/: __init__.py  debug_window.py  main_window.py
src/utils/: __init__.py  clipboard.py  diagnostic_manager.py  hotkey.py  logger_config.py
